added more tiles to Dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,800&display=swap" rel="stylesheet">
     <link href="./baseStyles.css" rel="stylesheet">
     <script src="https://apis.google.com/js/api.js"></script>
