--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,25 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#64B7CE">
     <meta name="theme-color" content="#64B7CE">
-
-
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,800&display=swap" rel="stylesheet">
-    <link href="./baseStyles.css" rel="stylesheet">
-    <link href="./chartStyles.css" rel="stylesheet">
+    <link href="baseStyles.css" rel="stylesheet">
+    <link href="chartStyles.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="mystyles.css" />
+
     <script src="https://apis.google.com/js/api.js"></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.svg" or "favicon.svg", "%PUBLIC_URL%/favicon.svg" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Savvy Plan</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
-  <script>
-        Array.prototype.filterAll = function(name, ...args) {console.log(args.map(arg => this.filter( d => d[name] === arg)))};
-  </script>
 </html>
